# go-board-fun

./: .gitignore  CMakeLists.txt  Go_Board_Constraints.sdc  README.md
common/: test-common.hpp  test-fixture.hpp  test-listener.cpp  test-listener.hpp  test-main.cpp
hdlbits/: CMakeLists.txt  dff.v  dff_main.cpp  dff_test.cpp
nes-controller/: CMakeLists.txt  nes_controller.v  nes_controller.vh  nes_controller_top.v  synchronizer.v  test_nes_controller.cpp
nes-controller/lattice/: nes_controller_sbt.project  nes_controller_syn.prj
project-01-nes-controller/: CMakeLists.txt  nes_controller.v  nes_controller.vh  nes_controller_tb.v  nes_controller_top.v  test-nes-controller.cpp
project-01-nes-controller/lattice/: nes_controller_sbt.project  nes_controller_syn.prj
pwm/: CMakeLists.txt  channel_1_note_sequencer.v  channel_1_pulse.v  channel_2_note_sequencer.v  channel_2_pulse.v  channel_3_note_sequencer.v  channel_3_triangle.v  note_length_table.v  note_length_table.vh  note_table.rb  note_table.txt  note_table.v  note_table.vh  phase_generator.v  pwm.v  pwm_note_sequencer.v  pwm_note_sequencer_2.v  pwm_sequencer.v  pwm_tb.v  pwm_test.cpp  pwm_top.v  sin_generator.v  sin_table.txt  sine_generator.v  sine_table.rb  sine_table.txt  timing_strobe_generator.v
pwm/lattice/: pwm_sbt.project  pwm_syn.prj
